# lutecio

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  nixpacks.toml
scripts/: build_msvc.bat  configure_msvc.bat
src/: main.cpp
src/commands/: command.hpp  ping_command.hpp
src/registries/: command_registry.cpp  command_registry.h
